bot_keepalive_output.log
2025-05-03 14:18:06,085 - __main__ - INFO - Starting keep_alive_http.py Flask server...
2025-05-03 14:18:06,085 - __main__ - INFO - Self-ping thread started.
2025-05-03 14:18:06,086 - __main__ - INFO - Starting Flask server on 0.0.0.0:3000
 * Serving Flask app 'keep_alive_http' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
2025-05-03 14:18:06,089 - werkzeug - WARNING -  * Running on all addresses.
   WARNING: This is a development server. Do not use it in a production deployment.
2025-05-03 14:18:06,089 - werkzeug - INFO -  * Running on http://172.17.0.6:3000/ (Press CTRL+C to quit)
2025-05-03 14:18:07,592 - __main__ - INFO - Home route accessed. Uptime: 0.03 minutes
2025-05-03 14:18:07,592 - werkzeug - INFO - 127.0.0.1 - - [03/May/2025 14:18:07] "GET / HTTP/1.1" 200 -
2025-05-03 14:18:07,598 - werkzeug - INFO - 127.0.0.1 - - [03/May/2025 14:18:07] "[33mGET /___glitch_loading_status___ HTTP/1.1[0m" 404 -
2025-05-03 14:18:07,612 - __main__ - INFO - Wake route accessed
2025-05-03 14:18:07,612 - werkzeug - INFO - 127.0.0.1 - - [03/May/2025 14:18:07] "GET /wake HTTP/1.1" 200 -
2025-05-03 14:18:07,703 - __main__ - INFO - Home route accessed. Uptime: 0.03 minutes
2025-05-03 14:18:07,703 - werkzeug - INFO - 127.0.0.1 - - [03/May/2025 14:18:07] "GET / HTTP/1.1" 200 -
2025-05-03 14:18:07,737 - __main__ - INFO - Self ping executed to https://cuddly-speckled-cone.glitch.me/wake. Status code: 200
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
  File "keep_alive_http.py", line 29
    return f"Bot is alive! Uptime: {uptime_minutes:.2f} minutes. Last ping: {time.strftime(\'%Y-%m-%d %H:%M:%S\', time.localtime(last_ping_time))}"@app.route('/wake')
          ^
SyntaxError: f-string expression part cannot include a backslash
